corrected the horizontal view manu bar issue where it switches from mobile to desktop, now the menu will remain on mobile view when horizontal

--- a/public/css/VideoGrid.css
+++ b/public/css/VideoGrid.css
@@ -222,7 +222,6 @@
         display: grid !important;
         grid-gap: 10px 5px;
         grid-template-columns: 50%;
-        grid-template-rows: 18% auto;
         grid-template-areas:
             "header header"
             "controls controls";
@@ -297,6 +296,94 @@
         background: rgba(255, 255, 255, 0.3);
     }
 }
+
+@media (max-width: 1024px) and (orientation: landscape) {
+    .videoMenuBar {
+        position: fixed;
+        padding: 15px;
+        padding-left: 65px;
+        bottom: 0;
+        background: rgba(0, 0, 0, 1);
+        transform: translateY(100%);
+        transition: transform 0.3s ease-out, opacity 0.3s ease-out;
+        display: grid !important;
+        grid-gap: 10px 5px;
+        grid-template-columns: 50%;
+        grid-template-areas:
+            "header header"
+            "controls controls";
+        align-content: start;
+        justify-items: start;
+        overflow-y: auto;
+        z-index: 1000;
+    }
+    
+    .videoMenuBar .nostr-image-button {
+        top: 10px;
+        left: 65px !important;
+        width: 50px;
+        height: 50px;
+    }
+
+    .videoMenuBar .peer-name-header {
+        grid-area: header;
+        width: 100%;
+        padding: 40px;
+        background-color: rgba(255, 255, 255, 0.2);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        border-radius: 10px;
+        margin-bottom: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .videoMenuBar .peer-name {
+        font-size: 18px;
+        font-weight: bold;
+        color: #fff;
+        text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        background-color: rgba(36, 36, 36, 0.8);
+        border-radius: 10px;
+        padding: 6px;
+        width: 100%;
+    }
+
+    .videoMenuBar input,
+    .videoMenuBar button {
+        font-size: 16px;
+        color: #fff;
+        background: rgba(255, 255, 255, 0.2);
+        width: 100%;
+        height: 45px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 10px;
+    }
+
+    .videoMenuBar .fas,
+    .videoMenuBar .fab {
+        font-size: 20px;
+        margin-right: 8px;
+        transition: color 0.3s;
+    }
+
+    .videoMenuBar input[type="range"] {
+        width: 100%;
+        margin: 5px 0;
+        background: rgba(255, 255, 255, 0.1);
+        border-radius: 5px;
+        height: 5px;
+    }
+
+    .videoMenuBar button:active {
+        background: rgba(255, 255, 255, 0.3);
+    }
+}
+
 
 .expand-video-content {
     position: relative;
